header input btn class corrected

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </p>
                 <div class="header__action">
                     <input class="header__cta" type="text" placeholder="Your E-mail Address">
-                    <!-- <button class="header__cta">Get Started</button> -->
+                    <button class="header__btn">Get Started</button>
                 </div>
                 <div class="header__customers">
                     <p>OUR TRUSTED CUSTOMERS</p>
