features/ services section created

--- a/index.html
+++ b/index.html
@@ -74,32 +74,136 @@
 
     <section id="header">
         <div class="row">
-        <div class="header__container">
-            <div class="header__cont--left">
-                <h1 class="header__title">
-                    Beautiful React Templates <span class="purple">for you</span>
-                </h1>
-                <p class="header__para">
-                    Our templates are easy to setup, understand and customize. Fully modular components with a variety
-                    of pages and components.
-                </p>
-                <div class="header__action">
-                    <input class="header__cta" type="text" placeholder="Your E-mail Address">
-                    <button class="header__btn">Get Started</button>
+            <div class="header__container">
+                <div class="header__cont--left">
+                    <h1 class="header__title">
+                        Beautiful React Templates <span class="purple">for you</span>
+                    </h1>
+                    <p class="header__para">
+                        Our templates are easy to setup, understand and customize. Fully modular components with a
+                        variety
+                        of pages and components.
+                    </p>
+                    <div class="header__action">
+                        <input class="header__cta" type="text" placeholder="Your E-mail Address">
+                        <button class="header__btn">Get Started</button>
+                    </div>
+                    <div class="header__customers">
+                        <p>OUR TRUSTED CUSTOMERS</p>
+                        <img class="header__img" src="./images/customers-logo-strip.680ac7c2 (1).png" alt="">
+                    </div>
                 </div>
-                <div class="header__customers">
-                    <p>OUR TRUSTED CUSTOMERS</p>
-                    <img class="header__img" src="./images/customers-logo-strip.680ac7c2 (1).png" alt="">
+                <div class="header__cont--right">
+                    <div class="header__illustration">
+                        <img class="header__illustration--img" src="./images/design-illustration-2.6da6a00b.svg" alt="">
+                    </div>
                 </div>
             </div>
-            <div class="header__cont--right">
-                <div class="header__illustration">
-                    <img class="header__illustration--img" src="./images/design-illustration-2.6da6a00b.svg" alt="">
-                </div>
-            </div>
-        </div>
         </div>
     </section>
+
+    <main>
+        <section id="features">
+            <div class="row">
+                <div class="features__container">
+                    <div class="features__cont--three">
+                        <h5 class="features__sub-header">
+                            <span class="purple">FEATURES</span>
+                        </h5>
+                        <h2 class="features__heading">
+                            We Have Amazing <span class="purple">Services.</span>
+                        </h2>
+                        <p class="features__para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                        </p>
+                        <div class="features__spacer"></div>
+
+                        <div class="services__container">
+                            <div class="services">
+
+                                <div class="service">
+                                    <figure class="service__img--wrapper">
+                                        <img class="service__img" src="./images/shield.svg" alt="">
+                                    </figure>
+                                    <div class="service__description">
+                                        <h5 class="service__title">Secure</h5>
+                                        <p class="service__para">
+                                            We strictly only deal with vendors that provide top notch security.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="service">
+                                    <figure class="service__img--wrapper">
+                                        <img class="service__img" src="./images/call.svg" alt="">
+                                    </figure>
+                                    <div class="service__description">
+                                        <h5 class="service__title">24/7 Support</h5>
+                                        <p class="service__para">
+                                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="service">
+                                    <figure class="service__img--wrapper">
+                                        <img class="service__img" src="./images/slider.svg" alt="">
+                                    </figure>
+                                    <div class="service__description">
+                                        <h5 class="service__title">Customizable</h5>
+                                        <p class="service__para">
+                                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="service">
+                                    <figure class="service__img--wrapper">
+                                        <img class="service__img" src="./images/arrows.svg" alt="">
+                                    </figure>
+                                    <div class="service__description">
+                                        <h5 class="service__title">Reliable</h5>
+                                        <p class="service__para">
+                                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="service">
+                                    <figure class="service__img--wrapper">
+                                        <img class="service__img" src="./images/bolt.svg" alt="">
+                                    </figure>
+                                    <div class="service__description">
+                                        <h5 class="service__title">Fast</h5>
+                                        <p class="service__para">
+                                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="service">
+                                    <figure class="service__img--wrapper">
+                                        <img class="service__img" src="./images/heart.svg" alt="">
+                                    </figure>
+                                    <div class="service__description">
+                                        <h5 class="service__title">Easy</h5>
+                                        <p class="service__para">
+                                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                                        </p>
+                                    </div>
+                                </div>
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
