quality work section added

--- a/index.html
+++ b/index.html
@@ -203,6 +203,36 @@
             </div>
 
         </section>
+
+        <section id="quality">
+<div class="row">
+    <div class="quality__container">
+        <div class="quality__cont--two">
+            <div class="quality__img--wrapper">
+                <img class="quality__img" src="./images/hero-screenshot-1.40a097b5.png" alt="">
+            </div>
+            <div class="quality__info--cont">
+                <div class="quality__info">
+                    <h5 class="quality__sub--title">
+                        <span class="purple">Quality Work</span>
+                    </h5>
+                    <h2 class="quality__title">
+                        Designed & Developed by <span class="purple">Professionals</span>
+                    </h2>
+                    <p class="quality__para">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <button class="quality__button">Learn More</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+        </section>
     </main>
 </body>
 
