steps section added

--- a/index.html
+++ b/index.html
@@ -205,33 +205,86 @@
         </section>
 
         <section id="quality">
-<div class="row">
-    <div class="quality__container">
-        <div class="quality__cont--two">
-            <div class="quality__img--wrapper">
-                <img class="quality__img" src="./images/hero-screenshot-1.40a097b5.png" alt="">
-            </div>
-            <div class="quality__info--cont">
-                <div class="quality__info">
-                    <h5 class="quality__sub--title">
-                        <span class="purple">Quality Work</span>
-                    </h5>
-                    <h2 class="quality__title">
-                        Designed & Developed by <span class="purple">Professionals</span>
-                    </h2>
-                    <p class="quality__para">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </p>
-                    <button class="quality__button">Learn More</button>
+            <div class="row">
+                <div class="quality__container">
+                    <div class="quality__cont--two">
+                        <div class="quality__img--wrapper">
+                            <img class="quality__img" src="./images/hero-screenshot-1.40a097b5.png" alt="">
+                        </div>
+                        <div class="quality__info--cont">
+                            <div class="quality__info">
+                                <h5 class="quality__sub--title">
+                                    <span class="purple">Quality Work</span>
+                                </h5>
+                                <h2 class="quality__title">
+                                    Designed & Developed by <span class="purple">Professionals</span>
+                                </h2>
+                                <p class="quality__para">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                                <button class="quality__button">Learn More</button>
 
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
 
+        </section>
+
+        <section id="steps">
+            <div class="row">
+                <div class="steps__container">
+                    <div class="steps__cont--two">
+                        <div class="steps__img--wrapper">
+                            <img class="steps__img" src="./images/hero-screenshot-2.241aac1f.png" alt="">
+                        </div>
+                        <div class="steps__info--container">
+                            <div class="steps__content">
+                                <h5 class="steps__subheading">
+                                    <span class="purple">STEPS</span>
+                                </h5>
+                                <h2 class="steps__title">
+                                    Easy to <span class="purple">Get Started.</span>
+                                </h2>
+                                <ul class="steps__container">
+                                    <li class="step">
+                                        <div class="step__number">01</div>
+                                        <div class="step__info">
+                                            <h6 class="step__title">Register</h6>
+                                            <p class="step__para">
+                                                Create an account with us using Google or Facebook.
+                                            </p>
+                                        </div>
+                                    </li>
+
+                                    <li class="step">
+                                        <div class="step__number">02</div>
+                                        <div class="step__info">
+                                            <h6 class="step__title">Download</h6>
+                                            <p class="step__para">
+                                                Browse and Download the template that you like from the marketplace.
+                                            </p>
+                                        </div>
+                                    </li>
+
+                                    <li class="step">
+                                        <div class="step__number">03</div>
+                                        <div class="step__info">
+                                            <h6 class="step__title">Run</h6>
+                                            <p class="step__para">
+                                                Follow the instructions to setup and customize the template to your needs.
+                                            </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
