--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>final project</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -275,7 +276,8 @@
                                         <div class="step__info">
                                             <h6 class="step__title">Run</h6>
                                             <p class="step__para">
-                                                Follow the instructions to setup and customize the template to your needs.
+                                                Follow the instructions to setup and customize the template to your
+                                                needs.
                                             </p>
                                         </div>
                                     </li>
@@ -284,6 +286,72 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="values">
+            <div class="row">
+                <div class="values__container">
+                    <div class="values__cont--two">
+                        <div class="values__img--wrapper">
+                            <img class="values__img" src="./images/prototype-illustration.21bc4b3f.svg" alt="">
+                        </div>
+                        <div class="values__info--cont">
+                            <div class="values__info">
+                                <h5 class="values__subheader">
+                                    <span class="purple">VALUES</span>
+                                </h5>
+                                <h2 class="values__title">
+                                    We Always Abide by Our <span class="purple">Principles.</span>
+                                </h2>
+                                <p class="values__para">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+
+                                <div class="value__items--container">
+
+                                    <div class="values__item">
+                                        <div class="values__item--title">
+                                            <div class="value__icon--cont">
+                                                <a href="" class="value__icon">
+                                                    <i class="fa-solid fa-hand-holding-dollar"></i>
+                                                </a>
+                                            </div>
+                                            <div class="value__item--header">Affordable</div>
+                                        </div>
+                                        <p class="value__item--para">
+                                            We promise to offer you the best rate we can - at par with the industry
+                                            standard.
+                                        </p>
+                                    </div>
+
+
+
+                                    <div class="values__item">
+                                        <div class="values__item--title">
+                                            <div class="value__icon--cont">
+                                                <a href="" class="value__icon">
+                                                    <i class="fa-solid fa-dollar-sign"></i>
+                                                </a>
+                                            </div>
+                                            <div class="value__item--header">Professionalism</div>
+                                        </div>
+                                        <p class="value__item--para">
+                                            We assure you that our templates are designed and created by professional
+                                            designers.
+                                        </p>
+                                    </div>
+
+                                </div>
+
+                                <button class="values__btn">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
     </main>
