--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     <div class="faq__content">
                         <div class="faq__content--header">
                             <h3 class="faq__title">
-                                Are all the templates easily customizable ?
+                                how long do you support standalone templates for ?
                             </h3>
                             <button class="faq__arrow">
                                 <i class="fa-solid fa-angle-down"></i>
@@ -556,7 +556,7 @@
                     <div class="faq__content">
                         <div class="faq__content--header">
                             <h3 class="faq__title">
-                                Are all the templates easily customizable ?
+                                What kind of payment methods do you accept ?
                             </h3>
                             <button class="faq__arrow">
                                 <i class="fa-solid fa-angle-down"></i>
@@ -572,7 +572,7 @@
                     <div class="faq__content">
                         <div class="faq__content--header">
                             <h3 class="faq__title">
-                                Are all the templates easily customizable ?
+                               Is there a subscription service to get the latest templates ?
                             </h3>
                             <button class="faq__arrow">
                                 <i class="fa-solid fa-angle-down"></i>
@@ -589,6 +589,79 @@
             </div>
         </section>
     </main>
+
+    <footer id="footer">
+        <div class="row">
+            <div class="footer__container">
+                <div class="footer__links">
+
+                    <div class="footer__link">
+                        <h4 class="link__title">MAIN</h4>
+                        <a class="link__name" href="">Blog</a>
+                        <a class="link__name" href="">Faqs</a>
+                        <a class="link__name" href="">Support</a>
+                        <a class="link__name" href="">About Us</a>
+                    </div>
+
+                    <div class="footer__link">
+                        <h4 class="link__title">PRODUCT</h4>
+                        <a class="link__name" href="">Log In</a>
+                        <a class="link__name" href="">Personal</a>
+                        <a class="link__name" href="">Business</a>
+                        <a class="link__name" href="">Team</a>
+                    </div>
+
+                    <div class="footer__link">
+                        <h4 class="link__title">PRESS</h4>
+                        <a class="link__name" href="">Logos</a>
+                        <a class="link__name" href="">Events</a>
+                        <a class="link__name" href="">Stories</a>
+                        <a class="link__name" href="">Office</a>
+                    </div>
+
+                    <div class="footer__link">
+                        <h4 class="link__title">TEAM</h4>
+                        <a class="link__name" href="">Careers</a>
+                        <a class="link__name" href="">Founders</a>
+                        <a class="link__name" href="">Culture</a>
+                        <a class="link__name" href="">Onboarding</a>
+                    </div>
+
+                    <div class="footer__link">
+                        <h4 class="link__title">LEGAL</h4>
+                        <a class="link__name" href="">GDPR</a>
+                        <a class="link__name" href="">Privacy Policy</a>
+                        <a class="link__name" href="">Terms of Service</a>
+                        <a class="link__name" href="">Disclaimer</a>
+                    </div>
+                    
+
+                </div>
+
+                <div class="footer__bottom--info">
+                    <figure class="footer__logo--wrapper">
+                        <img class="footer__logo" src="./images/logo.2c489fc4.svg" alt="">
+                    </figure>
+
+                    <p class="footer__copyright">
+                        © 2022 Treact. All Right Reserved.
+                    </p>
+                    <div class="footer__icons">
+                        <button class="footer__icon">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </button>
+                        <button class="footer__icon">
+                            <i class="fa-brands fa-twitter"></i>
+                        </button>
+                        <button class="footer__icon">
+                            <i class="fa-brands fa-youtube"></i>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
